package es.ull.patrones.practica3.GUI;

public interface SportsElementViewer {
    //void loadAndDisplayElements(); // Método para cargar y mostrar elementos deportivos en la interfaz gráfica

}